Resnet Finetune 5 epochs done

--- a/keras/Finetune Resnet 101.ipynb
+++ b/keras/Finetune Resnet 101.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -24,6 +16,7 @@
     "from keras.models import load_model\n",
     "\n",
     "from flyyufelix_models.resnet_101 import resnet101_model\n",
+    "from flyyufelix_models.custom_layers.scale_layer import Scale\n",
     "\n",
     "import threading\n",
     "lock = threading.Lock()\n",
@@ -341,6 +334,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ankdesh/virtualenvs/cdiscount-py2.7/local/lib/python2.7/site-packages/keras/engine/topology.py:1252: UserWarning: The `Merge` layer is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n",
+      "  return cls(**config)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = load_model('saved_models/Resnet101.01-0.49-0.51_RandomSplit_Train_0.5_0.1.h5',custom_objects={\n",
+    "                   'Scale':Scale})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -353,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +439,10 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "136670/174074 [======================>.......] - ETA: 10312s - loss: 2.4990 - acc: 0.5172"
+      "174073/174074 [============================>.] - ETA: 0s - loss: 2.5226 - acc: 0.5129Epoch 00000: saving model to saved_models/Resnet101.00-0.51-0.52_RandomSplit_Train_0.5_0.1.h5\n",
+      "174074/174074 [==============================] - ETA: 0s - loss: 2.5226 - acc: 0.5129 - val_loss: 2.5121 - val_acc: 0.5230\n",
+      "Epoch 2/2\n",
+      "174073/174074 [============================>.] - ETA: 0s - loss: 2.3817 - acc: 0.5312"
      ]
     }
    ],
